--- a/DatingApp-SPA/tsconfig.json
+++ b/DatingApp-SPA/tsconfig.json
@@ -14,7 +14,11 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "typesRoots": [
+      "node_modules/@types",
+      "src/typings.d.ts",
+    ],
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
