moving photo upload logic to a proper service

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PhotoUploadSettings": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
+  }
 }
